--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       - "3306:3306"
     networks:
       - paisa-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-proot"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
 
   auth-service:
     build: ./auth-service
@@ -22,7 +27,8 @@ services:
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - paisa-network
     restart: always
@@ -32,10 +38,19 @@ services:
     container_name: sms-service
     ports:
       - "8090:8090"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/paisasense?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     depends_on:
-      - kafka
+      mysql:
+        condition: service_healthy
+      kafka:
+        condition: service_started
     networks:
       - paisa-network
+    restart: always
 
   kong:
     image: kong:latest
@@ -50,28 +65,31 @@ services:
       - ./kong.yml:/etc/kong/kong.yml
     depends_on:
       - auth-service
-      - mysql
     networks:
       - paisa-network
 
   zookeeper:
     image: wurstmeister/zookeeper
+    container_name: zookeeper
     ports:
       - "2181:2181"
+    networks:
+      - paisa-network
 
   kafka:
     image: wurstmeister/kafka
-    container_name: paisa_sense-kafka-1
+    container_name: kafka
     ports:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: paisa_sense-zookeeper-1:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
     depends_on:
       - zookeeper
-
+    networks:
+      - paisa-network
 
 networks:
   paisa-network:
