--- a/sms-service/Dockerfile
+++ b/sms-service/Dockerfile
@@ -1,14 +1,12 @@
 # Use OpenJDK 17
 FROM openjdk:17-jdk-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Copy Maven build files
+# Copy jar
 COPY target/sms-service-0.0.1-SNAPSHOT.jar app.jar
 
-# Expose port (e.g., 8090)
 EXPOSE 8090
 
-# Run the Spring Boot app
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Directly run the app
+CMD ["java", "-jar", "app.jar"]
