--- a/kong.yml
+++ b/kong.yml
@@ -1,14 +1,17 @@
 _format_version: "2.1"
 
 services:
+  # ===============================
+  # Auth Service
+  # ===============================
   - name: auth-service
-    url: http://auth-service:8080
+    url: http://auth-service:8080   # Container/service URL in Docker
     routes:
       - name: auth-route
         paths:
-          - /auth
+          - /auth                     # Exposed path via Kong
     plugins:
-      - name: jwt
+      - name: jwt                     # JWT plugin for auth
         config:
           claims_to_verify:
             - exp
@@ -16,9 +19,32 @@ services:
             - jwt
           anonymous: true
 
+  # ===============================
+  # SMS Service
+  # ===============================
   - name: sms-service
-    url: http://sms-service:8090
+    url: http://sms-service:8090      # Container/service URL in Docker
     routes:
       - name: sms-route
         paths:
-          - /sms
+          - /sms                      # Exposed path via Kong
+    # You can add plugins here if needed (like rate limiting, auth, etc.)
+
+  # ===============================
+  # AI Parser Service (NEW)
+  # ===============================
+  - name: ai-parser-service
+    url: http://ai-parser-service:8080   # Container/service URL (from docker-compose)
+    routes:
+      - name: ai-parser-route
+        paths:
+          - /ai-parser                   # Path to call AI Parser Service via Kong
+    # Optional: Add plugins if you want auth or rate-limiting for this service
+    # plugins:
+    #   - name: jwt
+    #     config:
+    #       claims_to_verify:
+    #         - exp
+    #       uri_param_names:
+    #         - jwt
+    #       anonymous: true
